--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.15",
     "@types/sequelize": "^4.28.20",
     "bcrypt": "^5.1.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.0",
     "nodemailer": "^6.9.13",
+    "otp-generator": "^4.0.1",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "typescript": "^5.4.5"
@@ -29,6 +32,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
+    "@types/otp-generator": "^4.0.2",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2"
   }
